[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/CatMan Menu.png" type="Texture" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CatManMenu" type="Sprite" parent="."]
position = Vector2( 310.5, 170 )
scale = Vector2( 0.500781, 0.5 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -141.0
margin_right = 114.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayBtn" type="Button" parent="VBoxContainer"]
margin_right = 114.0
margin_bottom = 40.0
rect_min_size = Vector2( 114, 40 )
theme = SubResource( 1 )
custom_constants/hseparation = 0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsBtn" type="Button" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 114.0
margin_bottom = 90.0
rect_min_size = Vector2( 114, 40 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 114.0
margin_bottom = 140.0
rect_min_size = Vector2( 114, 40 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameVersionInfo" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -139.0
margin_top = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
